--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     	<meta name="description" content="site description goes here">
     	<meta name="keywords" content="site, keywords, go, here">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-		<title>Sass Project Template</title>
+		<title>Sass Final Super Project Template</title>
 
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
 		<div class="site-container">
 			<article class="card">
-				<h2>lorem ipsum</h2>
+				<h2>lorem ipsum 2</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, a, eos! Laborum labore, vero! Debitis dolores nemo sunt fugiat vitae consectetur tempora quidem, quia ut voluptatibus, animi qui, quo. Unde.</p>
 			</article>
 			<article class="card favourite">
