--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, a, eos! Laborum labore, vero! Debitis dolores nemo sunt fugiat vitae consectetur tempora quidem, quia ut voluptatibus, animi qui, quo. Unde.</p>
 			</article>
 			<article class="card favourite">
-				<h2>lorem ipsum</h2>
+				<h2>Boom</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, a, eos! Laborum labore, vero! Debitis dolores nemo sunt fugiat vitae consectetur tempora quidem, quia ut voluptatibus, animi qui, quo. Unde.</p>
 			</article>
 			<article class="card">
